add possibility to chenge time in the woterInputCatd
